fixed highlight code block overflow

--- a/source/less/_content.less
+++ b/source/less/_content.less
@@ -130,8 +130,10 @@
     background: lighten(@background-color,5%);
   }
   .highlight {
+    width: 100%;
     margin: 20px 0px;
     background: lighten(@background-color,5%);
+    overflow: auto;
 
     figcaption {
       background: white;
